Fix CSS bug on Firefox

--- a/public/modules/core/css/core.css
+++ b/public/modules/core/css/core.css
@@ -46,11 +46,11 @@ form.in-form {
 	border-color: #78FA89;
 }
 
-span.flag-gb {
+span.flag-gb::before {
 	content:url('/images/gb.png');
 	margin-right: 10px;
 }
-span.flag-be {
+span.flag-be::before {
 	content:url('/images/be.png');
 	margin-right: 10px;
 }
